--- a/package.json
+++ b/package.json
@@ -21,15 +21,13 @@
     "react-countup": "^6.5.3",
     "react-dom": "^18.2.0",
     "react-intersection-observer": "^9.5.0",
-    "react-router-dom": "^6.8.0",
-    "three": "^0.158.0"
+    "react-router-dom": "^6.8.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
     "@types/node": "^24.5.1",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
-    "@types/three": "^0.158.0",
     "@vitejs/plugin-react": "^4.4.1",
     "autoprefixer": "^10.4.0",
     "eslint": "^9.25.0",
